spec height issue with text oveflow removed spec height statements so longer text doesn't overflow

--- a/src/style.css
+++ b/src/style.css
@@ -4,19 +4,24 @@ body {
 }
 #wrapper{
     position: absolute;
+    width: 100%;
+    height: 100%;
+   align-items: center;
+
+}
+#rel-wrapper {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
-   
-
 }
 #quoteBox {
-    
+    position: relative;
     background-color: white;
-    width: 65%;
-    height: 40%;
+    margin-left: 1em;
+    margin-right: 1em;
     padding-bottom: 1.9em;
     
 }
@@ -26,11 +31,14 @@ body {
     align-items: flex-end;
     font-size: 2em;
     text-align: center;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
     
 }
 #author {
     height: 30%;
     padding-top: 1.5em;
+    margin-bottom: 0.5em;
 }
 
 .center{
@@ -44,6 +52,7 @@ body {
     background: rgb(0, 10, 40);
     padding: .25em;
     border-radius: 10px;
+    margin-left: 2em;
 }
 
 #butt:hover {
@@ -72,7 +81,7 @@ body {
 }
 
 #tweet-quote {
-    margin-left: 2em;
+    margin-left: 1em;
     background-color: rgb(0, 10, 40);
     color: white;
     padding: .5em;
@@ -99,7 +108,7 @@ p {
 @media only screen and (min-width: 800px) {
     #tweet-quote {
         font-size: 1.3em;
-        margin-left: 4em;
+        margin-left: 2em;
         padding: .5em;
     }
     #tumblr-quote {
@@ -112,7 +121,6 @@ p {
         padding: 0.75em;
     }
     #quoteBox {
-        width: 50%;
-        height: 40%;
+        width: 60%;
     }
   }
